--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,8 +196,12 @@ body{
 }
 /*Grids*/
 #multi-slider{
-    overflow: hidden;
+    overflow: scroll;
 }
+#multi-slider::-webkit-scrollbar {
+  display: none;
+}
+
 #multi-slider #wrapper{
     width: 100%;
     position: relative;
@@ -208,7 +212,8 @@ body{
 .multi-carausal-each{
     transition: all .3s cubic-bezier(0.25,0.8,0.25,1);
     box-shadow: 0 0 2px 0 rgb(0 0 0 / 19%), 0 2px 6px 0 rgb(0 0 0 / 19%);
-    max-width: 18rem;
+    max-width: 295px;
+    min-width: 295px;
     background: #ffffff;
     margin-right: 30px;
     margin-top: 17px;
